fix: correct overflow main

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,5 +17,5 @@
     color: $color-black;
     background-color: $color-light-grey-light-mode;
     width: auto;
-    overflow-y: hidden;
+    // overflow-y: hidden;
 }
