--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -9,7 +9,7 @@
     padding: 1.25rem 1rem;
     font-size: 0.8rem;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
     background-color: $color-white;
 
